--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
   <footer>
     <p>&copy; 2025 AnimeWorld | Contact: animefan@example.com</p>
     <p>
+       <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+       </a>
+      </p>
+    <p>
       <a href="https://jigsaw.w3.org/css-validator/check/referer">
        <img style="border:0;width:88px;height:31px"
         src="https://jigsaw.w3.org/css-validator/images/vcss"
@@ -98,3 +105,4 @@
   </script>
 </body>
 </html>
+
