--- a/index.html
+++ b/index.html
@@ -81,12 +81,10 @@
        <a href="https://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px"
             src="https://jigsaw.w3.org/css-validator/images/vcss"
-            alt="Valid CSS!" />
+            alt="Valid CSS!" >
        </a>
     </p>
-    </p>
   </footer>
-
   <script>
     function toggleCard(card) {
       document.querySelectorAll(".anime-card.expanded").forEach(openCard => {
@@ -99,5 +97,6 @@
   </script>
 </body>
 </html>
+
 
 
